--- a/themis/src/App.css
+++ b/themis/src/App.css
@@ -36,6 +36,20 @@
     transform: rotate(360deg);
   }
 }*/
+html{
+  background-color: #FDE2E4;
+  font-family: "Roboto";
+}
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 
 .boxed {
   border: 1px;
